Minecraft 1.21 (#500)
* 1.21

* address URL constructor deprecation

* Update metadata

* Update loom to 1.7